-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 8.0.0
-
-
7dc2c6b3b3 (qt-creator/qt-creator/9.0) 7dc2c6b3b3 (qt-creator/qt-creator/master)
use clangd



without clangd

After using clangd, the result will be less.
| For Gerrit Dashboard: QTCREATORBUG-27978 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 436841,2 | ClangCodeModel: Rename via LSP facilities | 9.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |